# scran_tests

./: CMakeLists.txt  README.md
docs/: Doxyfile  annotated.html  classes.html  compare__almost__equal_8hpp.html  compare__almost__equal_8hpp_source.html  dir_e21900c2a13a84e217df20dd51099bad.html  doxygen_crawl.html  expect__error_8hpp.html  expect__error_8hpp_source.html  files.html  functions.html  functions_vars.html  index.html  initial__value_8hpp.html  initial__value_8hpp_source.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  namespacescran__tests.html  scran__tests_8hpp.html  scran__tests_8hpp_source.html  simulate__compressed__sparse__matrix_8hpp.html  simulate__compressed__sparse__matrix_8hpp_source.html  simulate__vector_8hpp.html  simulate__vector_8hpp_source.html  structscran__tests_1_1CompareAlmostEqualParameters-members.html  structscran__tests_1_1CompareAlmostEqualParameters.html  structscran__tests_1_1SimulateCompressedSparseMatrixParameters-members.html  structscran__tests_1_1SimulateCompressedSparseMatrixParameters.html  structscran__tests_1_1SimulateVectorParameters-members.html  structscran__tests_1_1SimulateVectorParameters.html  structscran__tests_1_1SimulatedCompressedSparseMatrix-members.html  structscran__tests_1_1SimulatedCompressedSparseMatrix.html  structscran__tests_1_1SimulationParameters-members.html  structscran__tests_1_1SimulationParameters.html  vector__n_8hpp.html  vector__n_8hpp_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_1.js  pages_3.js  searchdata.js  typedefs_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js
include/: compare_almost_equal.h  compare_vectors.h  expect_error.h  simulate_vector.h
include/scran_tests/: compare_almost_equal.hpp  expect_error.hpp  initial_value.hpp  scran_tests.hpp  simulate_compressed_sparse_matrix.hpp  simulate_vector.hpp  vector_n.hpp
tests/: CMakeLists.txt
tests/src/: compare_almost_equal.cpp  expect_error.cpp  initial_value.cpp  simulate_compressed_sparse_matrix.cpp  simulate_vector.cpp  vector_n.cpp
